# social-thing-again

./: .gitignore  .python-version  README.md  database.db  pyproject.toml
src/app/: auth.py  config.py  db.py  dependencies.py  main.py  settings.py
src/app/models/: __init__.py  comment.py  post.py  user.py
src/app/routers/: account.py  comments.py  posts.py  token.py
