[project]
name = "social-thing-again"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "Jake Salgado", email = "5466068+jaek-s@users.noreply.github.com" },
]
dependencies = [
    "sqlmodel>=0.0.16",
    "uvicorn[standard]>=0.27.1",
    "fastapi>=0.110.0",
    "pydantic-settings>=2.2.1",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = ["ruff>=0.3.0", "pyright>=1.1.352"]

[tool.pdm.scripts]
dev = "uvicorn app.main:app --app-dir src/ --reload"
format = "ruff format src/app/ tests/"
lint = "ruff check src/app/ tests/"
lintfix = "ruff check src/app/ tests/ --fix"
typecheck = "pyright src/app/ tests/"

[tool.ruff]
line-length = 88


[tool.ruff.lint]
select = [
    "B",      # flake8-bugbear
    "C",      # flake8-comprehensions
    "C90",    # mccabe
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "Q",      # flake8-quotes
    "RUF100", # Unused noqa directive
]
ignore = [
    "E501", # line too long, handled by ruff formatter
]
